[gd_scene load_steps=5 format=3 uid="uid://csyacx8un7080"]

[ext_resource type="PackedScene" uid="uid://b2uywh38qmnxh" path="res://Core/Battle/Areas/BattleArea0.tscn" id="1_hg34g"]
[ext_resource type="Script" path="res://Core/Battle/battle_scene.gd" id="1_lsbo8"]
[ext_resource type="PackedScene" uid="uid://4oakufv7l1dw" path="res://Core/Battle/Ui/hud.tscn" id="3_r76kw"]
[ext_resource type="PackedScene" uid="uid://cy76wy1prl8ih" path="res://Core/Battle/poke_enemy.tscn" id="4_54lav"]

[node name="BattleScene" type="Node2D"]
script = ExtResource("1_lsbo8")

[node name="Area0" parent="." instance=ExtResource("1_hg34g")]

[node name="Hud" parent="." instance=ExtResource("3_r76kw")]

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(609, 760)
gizmo_extents = 67.1

[node name="AllyPokemon" type="Node2D" parent="."]

[node name="EnemyPokemon" type="Node2D" parent="."]

[node name="PokeEnemy" parent="EnemyPokemon" instance=ExtResource("4_54lav")]
position = Vector2(603, 163)

[node name="PresistentAttacks" type="Node2D" parent="."]

[connection signal="pokemon_selected" from="Hud" to="." method="_on_hud_pokemon_selected"]
